--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "berth",
+  "name": "package",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -21,7 +21,9 @@
     "ejs": "^2.6.1",
     "express": "^4.16.3",
     "extend": "^3.0.1",
+    "invalid": "^0.0.5",
     "mime-db": "^1.34.0",
+    "multer": "^1.3.1",
     "path": "^0.12.7",
     "serve-favicon": "^2.5.0"
   }
